# FireflyEngine

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
cmake/jsoncpp/: Findjsoncpp.cmake
src/: CMakeLists.txt
src/firefly/: AnimationTypes.h  CMakeLists.txt  Engine.cxx  Engine.h  EngineException.h  Entity.cxx  Entity.h  EntityManager.cxx  EntityManager.h  EntityPrototypes.cxx  EntityPrototypes.h  EventManager.cxx  EventManager.h  Frame.cxx  Frame.h  IGameState.cxx  IGameState.h  Renderer.cxx  Renderer.h  ResourceManager.cxx  ResourceManager.h  StateMachine.cxx  StateMachine.h  SystemManager.cxx  SystemManager.h  Types.h
src/firefly/components/: Ammunition.h  Fuel.h  Gravity.h  Health.h  Hyperspace.h  IComponent.h  Lifetime.h  Lives.h  Player.h  Position.h  RoundCollidable.h  ShipControls.h  State.h  Velocity.h  Visual.h
src/firefly/events/: AddAccelerationEvent.cxx  AddAccelerationEvent.h  AddSpeedEvent.cxx  AddSpeedEvent.h  CollisionEvent.cxx  CollisionEvent.h  EntityEvent.cxx  EntityEvent.h  EventType.h  GameStateEvent.cxx  GameStateEvent.h  IEvent.cxx  IEvent.h  KillEvent.cxx  KillEvent.h  NativeEvent.cxx  NativeEvent.h  PositionEvent.cxx  PositionEvent.h  SetAccelerationEvent.cxx  SetAccelerationEvent.h  SetAmmunitionEvent.cxx  SetAmmunitionEvent.h  SetFuelEvent.cxx  SetFuelEvent.h  SetSpeedEvent.cxx  SetSpeedEvent.h  ShootEvent.cxx  ShootEvent.h  StateEvent.cxx  StateEvent.h  SystemEvent.cxx  SystemEvent.h  UpdateEvent.cxx  UpdateEvent.h
src/firefly/systems/: ISystem.cxx  ISystem.h  RenderingSystem.cxx  RenderingSystem.h
src/game/: CMakeLists.txt
src/game/spacewar/: CMakeLists.txt  EntityBuilder.cxx  EntityBuilder.h  GameBuilder.cxx  GameBuilder.h  ObjectStates.h  PlayerId.h  SystemBuilder.cxx  SystemBuilder.h  WeaponId.h  main.cxx
src/game/spacewar/data/: CMakeLists.txt
src/game/spacewar/data/resources/: background.json  game_over.json  logo.json  player1.json  player2.json  rocket.json  star.json  the_needle_won.json  the_wedge_won.json
src/game/spacewar/misc/: Quadtree.cxx  Quadtree.h  UIHelpers.cxx  UIHelpers.h  VelocityHelpers.cxx  VelocityHelpers.h
src/game/spacewar/states/: GameOverState.cxx  GameOverState.h  GameStates.h  MainState.cxx  MainState.h  MenuState.cxx  MenuState.h  TheNeedleWonState.cxx  TheNeedleWonState.h  TheWedgeWonState.cxx  TheWedgeWonState.h
src/game/spacewar/systems/: CollisionSystem.cxx  CollisionSystem.h  FuelSystem.cxx  FuelSystem.h  GravitationalSystem.cxx  GravitationalSystem.h  LifetimeSystem.cxx  LifetimeSystem.h  PlayerUISystem.cxx  PlayerUISystem.h  PositioningSystem.cxx  PositioningSystem.h  RespawnSystem.cxx  RespawnSystem.h  ShipControlSystem.cxx  ShipControlSystem.h  StateSystem.cxx  StateSystem.h  VelocitySystem.cxx  VelocitySystem.h  WeaponSystem.cxx  WeaponSystem.h
